--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h3>History</h3>
     <ul id="list" class="list">
-      <li class="minus">Cash <span>-$400</span><button id="delete-btn"></button></li>
+      <!-- <li class="minus">Cash <span>-$400</span><button id="delete-btn"></button></li> -->
     </ul>
     <h3>Add new transaction</h3>
     <form id="form">
@@ -34,7 +34,7 @@
         <input type="text" id="text" placeholder="Enter text...">
       </div>
       <div class="form-control">
-        <label for="amount">Amount <br> (negative-expense, positive -income</label>
+        <label for="amount">Amount <br> (negative - expense, positive - income)</label>
         <input type="number" id="Amount" placeholder="Enter amount...">
       </div>
       <button class="btn">Add Transaction</button>
