--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="form-control">
         <label for="amount">Amount <br> (negative - expense, positive - income)</label>
-        <input type="number" id="Amount" placeholder="Enter amount...">
+        <input type="number" id="amount" placeholder="Enter amount...">
       </div>
       <button class="btn">Add Transaction</button>
     </form>
